added shtuchuy intelekt
